<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">પરાશર વિદ્યા સંકુલ</string>

    <string name="app_home">હોમ</string>
    <string name="app_about">અમારા વિશે</string>
    <string name="app_academics">શૈક્ષણિક</string>
    <string name="app_actvitices">પ્રવૃત્તિ</string>
    <string name="app_admission">પ્રવેશ પ્રક્રિયા</string>
    <string name="app_aim">શાળાનો હેતુ</string>
    <string name="app_faci">સુવિધા</string>
    <string name="app_man">મેનેજમેન્ટ</string>
    <string name="app_sta">સ્ટાફ</string>
    <string name="app_ntc">નોટિસ</string>
    <string name="app_news">સમાચાર</string>
    <string name="app_gallery">ગેલેરી</string>
    <string name="app_video">વિડિઓ</string>
    <string name="app_student">વિદ્યાર્થી પ્રવેશ</string>
    <string name="home_section">વિભાગ</string>
    <string name="home_work">ધોરણ</string>
    <string name="home_dis">હોમ વર્ક વિગત</string>
    <string name="show_gallry">ગેલેરી બતાવો</string>
    <string name="contact">અમારો સંપર્ક માટે</string>
    <string name="today">આજના સમાચાર</string>
    <string name="event">ઇવેન્ટ</string>
    <string name="download">અસાયમેન્ટ ડાઉનલોડ કરો</string>
    <string name="home_works">ગૃહ કાર્ય</string>
    <string name="share">શેર કરો</string>
    <string name="rate_us">રેટ કરો</string>
    <string name="holiday">રજા</string>
    <string name="results">સ્કૂલ પરિણામ</string>
    <string name="action_language">ભાષા</string>
    <string name="home_timetable">ટાઈમ ટેબલ</string>
    <string name="app_calander">વાર્ષિક કેલેન્ડર</string>
    <string name="player_error">YouTube પ્લેયર પ્રારંભ કરવામાં ભૂલ: %s</string>
    <!--<string-array name="lang_select">-->
    <!--<item>English</item>-->
    <!--<item>ગુજરાતી</item>-->
    <!--</string-array>-->
    <string name="String">હું તમારી સાથે આ શેર કરવા માંગો છો અહીં તમે PlayStore માંથી આ એપ્લિકેશનને ડાઉનલોડ કરી શકો છો</string>

    <string name="navigation_drawer_open">સંશોધક ડ્રોવરને ખોલો</string>
    <string name="navigation_drawer_close">નેવિગેશન ડ્રોવર બંધ કરો</string>

    <string name="action_settings">સેટિંગ્સ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">ખાલી ટુકડો હેલો</string>

</resources>
